<resources>
    <string name="app_name">Cpmad Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="password">Password</string>
    <string name="username">ID</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">Email</string>
    <string name="year">Year</string>
    <string name="faculty">Faculty</string>
    <string name="contact">Contact No</string>
    <string name="login">Login</string>
    <string name="register_note">No account yet?</string>
    <string name="register">Create Account</string>
    <string name="name">Name</string>
    <string name="error_email">Please enter a valid Email</string>
    <string name="error_username">Please enter a valid ID</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="error_password_mismatch">Password not match</string>
    <string name="error_year_empty">Year cannot be empty</string>
    <string name="error_year">Please enter a valid year</string>
    <string name="error_login_password">Password Not Correct</string>
    <string name="error_login_username">Username not found</string>
    <string name="login_keep_logged_in">Keep me logged in</string>
    <string name="error_login_logged_in">Username or Password changed. Please log in again</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="type">Type</string>
    <string name="expense_description">Description</string>
    <string name="value">Value</string>
    <string name="batch">Batch</string>
    <string name="course">Course</string>
</resources>
