<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance"
            android:hint="@string/name"
            android:inputType="text" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance"
            android:hint="@string/contact"
            android:inputType="text" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRegisterCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_input_distance"
            android:hint="@string/password_confirm"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorButtonText"
            android:theme="@style/Widget.Design.FloatingActionButton" />
    </LinearLayout>
</LinearLayout>